# ini

./: CMakeLists.txt  ReadMe.adoc
.github/workflows/: linux.yml  main.yml  windows.yml
cmake/: compile_options_setter.cmake  turn_off_warning.cmake
cmake_utils/: cpm_install.cmake  doc_var.cmake  nuget_install.cmake
cpm/: cpm_config.cmake
include/ini/: extractor.hpp  flusher.hpp  group_accessor.hpp  ini.hpp
include/ini/impl/: common.hpp  extractor.hpp  flusher.hpp  function_ref.hpp  group_accessor.hpp  manager.hpp
include/ini/internal/: common.hpp
ini/: CMakeLists.txt
ini/include/ini/: ini.hpp
ini/include/ini/impl/: ini_v2.hpp  ini_v3.hpp
ini/src/: ini.cpp  ini_read.cpp  ini_writer.cpp
src/: extractor.cpp  flusher.cpp  grammar.cpp  group_accessor.cpp  impl.cpp  ini_read.cpp  ini_writer.cpp
standalone_test/: CMakeLists.txt
standalone_test/src/: main.cpp
unit_test/: CMakeLists.txt
unit_test/src/: dummy_test.cpp  test_extractor.cpp  test_extractor_1.cpp  test_extractor_2.cpp  test_extractor_construct_from_std_string.cpp  test_extractor_construct_from_std_string_view.cpp  test_extractor_generate_file.hpp  test_extractor_std_string.cpp  test_flusher.cpp  test_flusher_1.cpp  test_flusher_2.cpp  test_reader.cpp  test_reader_with_comment.cpp  test_writer.cpp  test_writer_with_comment.cpp
